# afterhours

./: .gitignore  CMakeLists.txt  PLUGIN_API.md  PROFILING_README.md  PROFILING_SUMMARY.md  README.md  SNAPSHOT_APPLY.md  SOA_IMPLEMENTATION_STATUS.md  ah.h  bug_review_dec3_2025.md  build.sh  check_compile_fail_tests.sh  check_plugin_boundaries.sh  expected.hpp  remove-serializing-pointers-plan.md  rfc_fix_children.md  rfc_reusable_components.md  rfc_ui_simplification.md  todo.md
.claude/: settings.local.json
compile_fail/: snapshot_for_pointer_like_projected_value.cpp
docs/: build_speed.md  profiling_starter_kit.md  profiling_template_snippet.md  speed.md
example/: TEST_EXAMPLES_README.md  coverage.sh  makefile  run.sh
examples/: Makefile  autolayout_test  autolayout_test.cpp  calendar_stress_test.cpp  drawing_3d_example.cpp  entity_mapping_test.cpp  entity_mapping_test_helper.cpp  entity_mapping_test_helper.h  entity_query_test.cpp  gaps_repro_test.cpp  graphics_example.cpp  headless_validation.cpp  input_injector_mouse_delta_test.cpp  perf_stress_test.cpp  profile_harness.cpp  run_mouse_delta_backend_checks.sh  slider_test.cpp  stepper_test.cpp  system_map_test  system_map_test.cpp  tab_container_test.cpp  ui_test_harness.h
src/: ah.h  base_component.h  bitset_utils.h  bitwise.h  debug_allocator.h  developer.h  drawing_helpers.h  drawing_helpers_3d.h  ecs.h  entity.h  entity_helper.h  entity_query.h  font_helper.h  graphics.h  graphics_backend.h  graphics_common.h  library.h  logging.h  profiling.cpp  profiling.h  profiling_macros.h  singleton.h  system.h  type_name.h
tests/: Makefile  animation_test.cpp  camera_test.cpp  dump_ui_test.cpp  entity_pool_test.cpp  progress_bar_test.cpp  (+6 more)
(+373 files in other folders)
